--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Ionic App</title>
+    <title>CrumblePad</title>
 
     <base href="/" />
 
@@ -15,11 +15,11 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/assets/icon/favicon.png" />
+    <!-- <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/images/icons/icon-512x512.png" /> -->
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="Ionic App" />
+    <meta name="apple-mobile-web-app-title" content="CrumblePad" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   </head>
 
