--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!-- <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/images/icons/icon-512x512.png" /> -->
+    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/images/icons/icon-512x512.png" />
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
